@@ -23,6 +23,7 @@ import com.czertainly.core.dao.entity.acme.*;
 import com.czertainly.core.dao.repository.AcmeProfileRepository;
 import com.czertainly.core.dao.repository.RaProfileRepository;
 import com.czertainly.core.dao.repository.acme.*;
+import com.czertainly.core.model.auth.CertificateProtocolInfo;
 import com.czertainly.core.security.authz.SecuredParentUUID;
 import com.czertainly.core.security.authz.SecuredUUID;
 import com.czertainly.core.service.CertificateService;
@@ -65,7 +66,10 @@ import javax.naming.directory.Attribute;
 import javax.naming.directory.Attributes;
 import javax.naming.directory.DirContext;
 import javax.naming.directory.InitialDirContext;
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.StringWriter;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
@@ -160,12 +164,12 @@ public class AcmeServiceImpl implements AcmeService {
         } else {
             replaceUrl = "%s/%s/";
         }
-        directory.setNewNonce(String.format(replaceUrl + "new-nonce", baseUri, acmeProfileName));
-        directory.setNewAccount(String.format(replaceUrl + "new-account", baseUri, acmeProfileName));
-        directory.setNewOrder(String.format(replaceUrl + "new-order", baseUri, acmeProfileName));
-        directory.setNewAuthz(String.format(replaceUrl + "new-authz", baseUri, acmeProfileName));
-        directory.setRevokeCert(String.format(replaceUrl + "revoke-cert", baseUri, acmeProfileName));
-        directory.setKeyChange(String.format(replaceUrl + "key-change", baseUri, acmeProfileName));
+        directory.setNewNonce((replaceUrl + "new-nonce").formatted(baseUri, acmeProfileName));
+        directory.setNewAccount((replaceUrl + "new-account").formatted(baseUri, acmeProfileName));
+        directory.setNewOrder((replaceUrl + "new-order").formatted(baseUri, acmeProfileName));
+        directory.setNewAuthz((replaceUrl + "new-authz").formatted(baseUri, acmeProfileName));
+        directory.setRevokeCert((replaceUrl + "revoke-cert").formatted(baseUri, acmeProfileName));
+        directory.setKeyChange((replaceUrl + "key-change").formatted(baseUri, acmeProfileName));
         try {
             directory.setMeta(frameDirectoryMeta(acmeProfileName, isRaProfileBased));
         } catch (NotFoundException e) {
@@ -217,22 +221,22 @@ public class AcmeServiceImpl implements AcmeService {
 
         ResponseEntity.BodyBuilder responseBuilder;
         if (isRaProfileBased) {
-            accountDto.setOrders(String.format("%s/raProfile/%s/acct/%s/orders", baseUri, acmeProfileName, account.getAccountId()));
+            accountDto.setOrders("%s/raProfile/%s/acct/%s/orders".formatted(baseUri, acmeProfileName, account.getAccountId()));
             if (accountRequest.isOnlyReturnExisting()) {
                 responseBuilder = ResponseEntity.ok()
-                        .location(URI.create(String.format("%s/raProfile/%s/acct/%s", baseUri, acmeProfileName, account.getAccountId())));
+                        .location(URI.create("%s/raProfile/%s/acct/%s".formatted(baseUri, acmeProfileName, account.getAccountId())));
             } else {
                 responseBuilder = ResponseEntity
-                        .created(URI.create(String.format("%s/raProfile/%s/acct/%s", baseUri, acmeProfileName, account.getAccountId())));
+                        .created(URI.create("%s/raProfile/%s/acct/%s".formatted(baseUri, acmeProfileName, account.getAccountId())));
             }
         } else {
-            accountDto.setOrders(String.format("%s/%s/acct/%s/orders", baseUri, acmeProfileName, account.getAccountId()));
+            accountDto.setOrders("%s/%s/acct/%s/orders".formatted(baseUri, acmeProfileName, account.getAccountId()));
             if (accountRequest.isOnlyReturnExisting()) {
                 responseBuilder = ResponseEntity.ok()
-                        .location(URI.create(String.format("%s/%s/acct/%s", baseUri, acmeProfileName, account.getAccountId())));
+                        .location(URI.create("%s/%s/acct/%s".formatted(baseUri, acmeProfileName, account.getAccountId())));
             } else {
                 responseBuilder = ResponseEntity
-                        .created(URI.create(String.format("%s/%s/acct/%s", baseUri, acmeProfileName, account.getAccountId())));
+                        .created(URI.create("%s/%s/acct/%s".formatted(baseUri, acmeProfileName, account.getAccountId())));
             }
         }
 
@@ -969,7 +973,7 @@ public class AcmeServiceImpl implements AcmeService {
     }
 
     private String getHttpChallengeResponse(String domain, String token) throws AcmeProblemDocumentException {
-        return getResponseFollowRedirects(String.format(AcmeConstants.HTTP_CHALLENGE_BASE_URL, domain, token));
+        return getResponseFollowRedirects(AcmeConstants.HTTP_CHALLENGE_BASE_URL.formatted(domain, token));
     }
 
     private String getResponseFollowRedirects(String url) throws AcmeProblemDocumentException {
@@ -1118,7 +1122,8 @@ public class AcmeServiceImpl implements AcmeService {
                 if (logger.isDebugEnabled()) {
                     logger.debug("Requesting Certificate for the Order: {} and certificate signing request: {}", order, certificateSignRequestDto);
                 }
-                ClientCertificateDataResponseDto certificateOutput = clientOperationService.issueCertificate(SecuredParentUUID.fromUUID(order.getAcmeAccount().getRaProfile().getAuthorityInstanceReferenceUuid()), order.getAcmeAccount().getRaProfile().getSecuredUuid(), certificateSignRequestDto);
+                ClientCertificateDataResponseDto certificateOutput = clientOperationService.issueCertificate(SecuredParentUUID.fromUUID(order.getAcmeAccount().getRaProfile().getAuthorityInstanceReferenceUuid()), order.getAcmeAccount().getRaProfile().getSecuredUuid(), certificateSignRequestDto,
+                        CertificateProtocolInfo.Acme(order.getAcmeAccount().getAcmeProfileUuid(), order.getAcmeAccountUuid()));
                 order.setCertificateId(AcmeRandomGeneratorAndValidator.generateRandomId());
                 order.setCertificateReference(certificateService.getCertificateEntity(SecuredUUID.fromString(certificateOutput.getUuid())));
             } catch (Exception e) {
